@@ -97,6 +97,7 @@ All (GUI):
 - Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov).
 - Ensure that wxGrid::AutoSizeColumn/Row() never sets column/row size
   smaller than the minimal size.
+- Added <scrollrate> parameter to wxScrolledWindow XRC handler.
 
 All (Unix):
 
